2004-01-02 Vangelis Rokas <vrokas@otenet.gr>

	* src/SDCClrange.c: fixed bug 869095 that caused segfault
	in certain cases, e.g. when ROM assignment, patch provided
	from Albert den Haan.

2004-01-01 Bernhard Held <bernhard@bernhardheld.de>

	Many signedness and type propagation fixes:
	* src/SDCCicode.c: made geniCodeCast() static
	replaced SPEC_ by IS_ (cosmetic)
	(operandOperation): fixed div and mod operation
	(usualBinaryConversions): added support for promotion of char
	(geniCodeMultiply): replaced (unsigned long) by (TYPE_UDWORD)
	(geniCodeDivision): replaced (unsigned long) by (TYPE_UDWORD)
	(geniCodeAdd): an array index will stay unsigned, even if promoted
	from char to int
	(geniCodeArray): ditto
	* src/SDCCicode.h: made geniCodeCast() static: removed prototype
	* src/SDCCsymt.c (computeType): added more support for char;
	promotion of char is selectable by promoteCharToInt, fixed signedness
	for all cases
	(powof2): replaced (unsigned long) by (TYPE_UDWORD)
	* src/SDCCsymt.h (powof2): replaced (unsigned long) by (TYPE_UDWORD)
	* src/SDCCval (val*): replaced signedness calculation by
	computeType()
	rearranged if-branches (cosmetic)
	(valShift): added warning W_SHIFT_CHANGED
	(valCompare): fixed problem with different types
	* src/hc08/rallo.c (leastUsedLR): fixed gcc 3.3 warning
	* support/regression/tests/literalop.c: added many cases
	* support/regression/tests/ast_constant_folding.c: changed finally to
	'unsigned int'
	* .version: new year, new version: 2.3.7
	* src/SDCCmain.c (main): applied patch #866468
	* debugger/mcs51/sdcdb.c (parseCmdLine): added -k for ucsim, patch
	provided by Scott Bronson
	* doc/sdccman.lyx: updated documentation for sdcdb
	updated and added chapter tips

2004-01-01 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCsymt.h: missing from yesterday's commits

2003-12-31 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCC.y (struct_or_union_specifier),
	* support/Util/SDCCerr.c,